[package]
name = "bb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }

[build_dependencies]
    clap = { version = "3.1.9", features = ["derive"] }
    clap_complete = "3.1.4"

[package.metadata.scripts]
    hello = "echo \"Hello World\""
    coverage = "cargo llvm-cov --html; mkdir -p site/static/coverage; cp -r target/llvm-cov/html/* site/static/coverage/"
    server = "hugo -s site server"
    site = "hugo -s site"
